# customer_feedback

./: .gitignore  APPROACH.md  PROBLEM_STATEMENT.md  README.md  benchmark.py  main.py  pyproject.toml
intermediate_results/: search_results.json
outputs/: benchmark_results.json
sample_data/22710975-9625-5f39-9082-573ae3132bf5/: feedback_record.json  feedback_summary.json
src/: __init__.py  cost_tracker.py  embeddings.py  eval_parser.py  evaluator.py  indexer.py  llm_client.py  models.py  rag_pipeline.py  retriever.py
tests/: conftest.py  test_embeddings.py  test_indexer.py  test_llm_client.py  test_main.py  test_models.py  test_rag_pipeline.py  test_retriever.py
