[project]
name = "quotes"
version = "0.1.0"
description = "Script to execute SQL queries and save records as JSON files"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.9.0",
    "chromadb>=1.4.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
